deploy/inspection/envoy-inline.yaml
# Docker-local comparison. Publish only 127.0.0.1:18082:18082.
# The original HTTP authority/path are preserved; no host_rewrite is configured.
static_resources:
  listeners:
  - name: plaintext-inspection
    address:
      socket_address: {address: 0.0.0.0, port_value: 18082}
    per_connection_buffer_limit_bytes: 1048576
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: plaintext_inspection
          codec_type: AUTO
          normalize_path: false
          merge_slashes: false
          path_with_escaped_slashes_action: KEEP_UNCHANGED
          request_timeout: 5s
          stream_idle_timeout: 5s
          max_request_headers_kb: 32
          route_config:
            name: original_http
            virtual_hosts:
            - name: local_test_only
              domains: ["*"]
              routes:
              - match: {prefix: "/"}
                route:
                  cluster: local_upstream
                  timeout: 5s
                  max_stream_duration:
                    max_stream_duration: 5s
          http_filters:
          - name: envoy.filters.http.ext_proc
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
              failure_mode_allow: false
              message_timeout: 2s
              allow_mode_override: false
              processing_mode:
                request_header_mode: SEND
                response_header_mode: SEND
                request_body_mode: BUFFERED
                response_body_mode: BUFFERED
                request_trailer_mode: SKIP
                response_trailer_mode: SKIP
              grpc_service:
                envoy_grpc:
                  cluster_name: trapdefense_inspector
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: trapdefense_inspector
    type: STRICT_DNS
    connect_timeout: 1s
    dns_lookup_family: V4_ONLY
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}
    load_assignment:
      cluster_name: trapdefense_inspector
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: {address: host.docker.internal, port_value: 18081}
  - name: local_upstream
    type: STRICT_DNS
    connect_timeout: 1s
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: local_upstream
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: {address: host.docker.internal, port_value: 18090}
