deploy/inspection/envoy-mirror.yaml
# Detection-only HTTP request copies. No ext_proc, Broker or body mutations.
# HTTP responses are not copied. Raw packet/SPAN capture is a separate adapter.
static_resources:
  listeners:
  - name: plaintext-mirror-source
    address:
      socket_address: {address: 0.0.0.0, port_value: 18085}
    per_connection_buffer_limit_bytes: 1048576
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: plaintext_mirror
          codec_type: AUTO
          normalize_path: false
          merge_slashes: false
          path_with_escaped_slashes_action: KEEP_UNCHANGED
          stream_idle_timeout: 5s
          route_config:
            name: mirrored_http
            virtual_hosts:
            - name: local_test_only
              domains: ["*"]
              routes:
              - match: {prefix: "/"}
                route:
                  cluster: local_upstream
                  timeout: 5s
                  request_mirror_policies:
                  - cluster: mirror_collector
                    disable_shadow_host_suffix_append: true
                    runtime_fraction:
                      default_value: {numerator: 100, denominator: HUNDRED}
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: local_upstream
    type: STRICT_DNS
    connect_timeout: 1s
    dns_lookup_family: V4_ONLY
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http_protocol_options: {}
        http_filters:
        - name: envoy.filters.http.header_mutation
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.header_mutation.v3.HeaderMutation
            mutations:
              request_mutations:
              - remove_on_match:
                  key_matcher: {prefix: x-td-, ignore_case: true}
              - remove_on_match:
                  key_matcher: {prefix: x-asr-, ignore_case: true}
        - name: envoy.filters.http.upstream_codec
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.upstream_codec.v3.UpstreamCodec
    load_assignment:
      cluster_name: local_upstream
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: {address: host.docker.internal, port_value: 18090}
  - name: mirror_collector
    type: STRICT_DNS
    connect_timeout: 1s
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: mirror_collector
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: {address: host.docker.internal, port_value: 18083}
